Bug 1667953 p1. Stop reading printer specific settings from global prefs. r=bobowen

Differential Revision: https://phabricator.services.mozilla.com/D91819